--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.ico">
+  <link rel="manifest" href="/favicon/favicon.ico">
+  <link rel="mask-icon" href="/favicon/favicon.ico" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="./bootstrap-5.2.0-beta1-dist/css/bootstrap.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
